--- a/posts/test-post-one.mdx
+++ b/posts/test-post-one.mdx
@@ -1,4 +1,19 @@
 # Test Post One
 
-## Test post one
-this is a test post..
+## Subheading Example
+
+This is a test post with some [links](https://example.com) and *italic* or **bold** text.
+
+> This is a blockquote example.
+
+- Bullet list item
+- Another item
+
+1. Numbered list item
+2. Another numbered item
+
+Here’s some code:
+
+```javascript
+console.log('Hello, world!');
+```
