--- a/posts/cloudfront-analytics-tracking-system.mdx
+++ b/posts/cloudfront-analytics-tracking-system.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Your Title Here"
-date: "2024-07-04"
+title: 'Your Title Here'
+date: '2024-07-04'
 ---
 
 # Next.js CloudFront Analytics
