chore: update image

--- a/posts/collectibles-tracking-and-display-system.mdx
+++ b/posts/collectibles-tracking-and-display-system.mdx
@@ -2,7 +2,7 @@
 title: "A Collectibles Tracking and Display System in Next JS"
 author: "Dave Dennis"
 date: "2024-08-07"
-coverImage: "https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/cloudfront-analytics-tracking-system/cloudfront-example-logging-config.png"
+coverImage: "https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/cover-image.jpg"
 excerpt: "I've gotten really into collectibles lately. Well, I guess I've always been into them, but now I'm at a place where I can embrace the hobby. With this, I've faced one major problem, which is, I don't really have a good way to 1. track my stuff outside my brain so it's hard to share without word of mouth, and 2. I don't really have a way to show others besides having them over. To tackle this, I'm going to build a simple tracking and display system (maybe one day I'll add a bid system, we'll see)."
 ---
 
