feat: testing intro

--- a/posts/collectibles-tracking-and-display-system.mdx
+++ b/posts/collectibles-tracking-and-display-system.mdx
@@ -1,11 +1,35 @@
 ---
-title: "A Collectibles Tracking and Display System in Next JS"
-author: "Dave Dennis"
-date: "2024-08-07"
-coverImage: "https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/cover-image.jpg"
-excerpt: "I've gotten really into collectibles lately. Well, I guess I've always been into them, but now I'm at a place where I can embrace the hobby. With this, I've faced one major problem, which is, I don't really have a good way to 1. track my stuff outside my brain so it's hard to share without word of mouth, and 2. I don't really have a way to show others besides having them over. To tackle this, I'm going to build a simple tracking and display system (maybe one day I'll add a bid system, we'll see)."
+title: 'A Collectibles Tracking and Display System in Next JS'
+author: 'Dave Dennis'
+date: '2024-08-07'
+coverImage: 'https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/cover-image.jpg'
+excerpt: >
+  I've gotten really into collectibles lately. Well, I guess I've always been
+  into them, but now I'm at a place where I can embrace the hobby. With this,
+  I've faced one major problem: I don't really have a good way to track my stuff
+  outside my brain so it's hard to share without word of mouth, and I don't
+  really have a way to show others besides having them over. To tackle this, I'm
+  going to build a simple tracking and display system (maybe one day I'll add a
+  bid system, we'll see).
 ---
 
-# Test Me
+I've gotten really into collectibles lately. Well, I guess I've always been into
+them, but now I'm at a place where I can embrace the hobby. With this, I've
+faced one major problem (well, two).
 
-HELLO WORLDddd
+## The Problems
+
+The two main problems I'm trying to solve can be outlined as follows:
+
+1. I have started to accumulate a lot of stuff, and tracking is hard. Right now,
+   it's all tracked inside my brain. While some sets provide you with nice lists
+   (take the Pokémon
+   [TCG: Scarlet & Violet—151](file:///home/daveved/Downloads/scarlet-violet-151-card-list.pdf))
+   for your items, etc., it's not ideal for me. I would like a digital workspace
+   for all my stuff.
+2. I'd like to be able to show some of this off, but right now I can't without
+   having people over. I'd like to be able to share my collection without that.
+
+There is a third problem regarding wanting to sell this stuff, but I'll tackle
+that later. Right now, I'm a collector, not a seller, and if you ask my wife, it
+will probably always be that way. I get attached to my items.
