feat: more content

--- a/posts/collectibles-tracking-and-display-system.mdx
+++ b/posts/collectibles-tracking-and-display-system.mdx
@@ -79,7 +79,7 @@ It's very straightforward and it's going to let me grow my [davedennis.dev](http
 
 The recommend way to deploy Next apps is via [Vercel](https://vercel.com/docs/deployments/overview) which makes sense as they created the framework. I on the other hand am an AWS guy, so I am just going to expand on my current architecture on AWS, for this. A high level diagram is as follows. I will note i'm sure vercel is great for hosting (granted i've read some horor stories about people getting surpoise bills but that's just the servless life), and I do think I shoudl give it a try, maybe for my next pet proejct (which I probalby wont finish - HA).
 
-![Collectibles Architecture](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/architecture.jpg)
+![Collectibles Architecture](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/architecture.jpeg)
 
 I'm going to also touch on a few things that you may be asking your self, to just clear the air, I won't make any other justifications, otherwise (it's my site, so who would care).
 
