--- a/posts/collectibles-tracking-and-display-system.mdx
+++ b/posts/collectibles-tracking-and-display-system.mdx
@@ -281,8 +281,8 @@ Now that we have our project setup, we can test the `hello world`. The thing to 
 
 From the root directory you can run `pnpm dev`, and you should see the turbo repo multiplexer setup.
 
-![Collectibles Architecture](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/tmux-server-3001.png)
+![Tmux Server 3001](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/tmux-server-3001.png)
 
 and you can visit it at `localhost:30001`
 
-![Collectibles Architecture](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/hello-wrold-nextjs.png)
+![Hello World NextJs App](https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/collectibles-tracking-and-display-system/hello-world-nextjs.png)
